Add <meta name="description"> tag, Fix title

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="Data Visualization Designer in Tokyo">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Kazuki OGIWARA: Personal page" />
-    <meta property="og:description" content="Data Visualization Engineer / Designer in Tokyo" />
+    <meta property="og:description" content="Data Visualization Designer in Tokyo" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title></title>
@@ -36,7 +37,7 @@
         <div id="page-content" class="home">
           <div id="title-block">
             <h1>Kazuki OGIWARA</h1>
-            <h3>Data Visualization Engineer / Designer in Tokyo</h3>
+            <h3>Data Visualization Designer in Tokyo</h3>
           </div>
           <div id="works-block">
             <section>
@@ -90,7 +91,7 @@
                 <span class="strong">Residence: </span>Yokohama, Japan
               </div>
               <div class="subsection">
-                <span class="strong">Currently working as: </span>Data Visualization Engineer / Designer at Toyo Keizai Inc.
+                <span class="strong">Currently working as: </span>Data Visualization Designer at Toyo Keizai Inc.
               </div>
               <div class="subsection">
                 <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
