--- a/works/earthquakes/description-en.html
+++ b/works/earthquakes/description-en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="Animation of earthquakes on the earth in the past an hour to 30 days">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/earthquakes/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Earthquakes on the earth" />
