--- a/works/index.html
+++ b/works/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="Data Visualization Designer in Tokyo">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Kazuki OGIWARA: Personal page" />
-    <meta property="og:description" content="Data Visualization Engineer / Designer in Tokyo" />
+    <meta property="og:description" content="Data Visualization Designer in Tokyo" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title></title>
