--- a/works/jpycoins/description-en.html
+++ b/works/jpycoins/description-en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="Number of Coins Issued in Japan from 1948 to 2016">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Just Visualization: Japanese Coins" />
