--- a/works/teachers/description-en.html
+++ b/works/teachers/description-en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="How and why the job security of elementary and junior high school teachers is collapsing">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/teachers/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Schools are depending on part-time teachers" />
