--- a/works/viz4socialgood/description-en.html
+++ b/works/viz4socialgood/description-en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content=""But you do not know where I came from or where I am going"">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Visualization of Human Trafficking" />
