--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="My works of data visualization">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Works - Kazuki OGIWARA" />
@@ -40,7 +41,7 @@
           <div id="about-block">
             <section>
               <h2>Kazuki OGIWARA</h1>
-              <h5>Data Visualization Engineer / Designer in Tokyo</h5>
+              <h5>Data Visualization Designer in Tokyo</h5>
               <div class="subsection">
                 <span class="strong">Born: </span>1987
               </div>
@@ -54,7 +55,7 @@
                 <span class="strong">Residence: </span>Yokohama, Japan
               </div>
               <div class="subsection">
-                <span class="strong">Currently working as: </span>Data Visualization Engineer / Designer at Toyo Keizai Inc.
+                <span class="strong">Currently working as: </span>Data Visualization Designer at Toyo Keizai Inc.
               </div>
               <div class="subsection">
                 <a href="https://www.linkedin.com/in/kazuki-ogiwara-9ba764122/" target="_blank">LinkedIn</a>
@@ -72,7 +73,7 @@
               </div>
               <div class="subsection">
                 <h4>
-                  <span class="strong">Data Visualization Engineer</span> at Digital Media Department
+                  <span class="strong">Data Visualization Designer</span> at Digital Media Department
                 </h4>
                 <p class="gray">September 2017 - Present</p>
               </div>
