--- a/works/dissolution/description-en.html
+++ b/works/dissolution/description-en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="Timeline of elections and dissolutions in the G7 countries after WWII">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/dissolution/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Elections and Dissolutions in The G7" />
