--- a/works/population/description-en.html
+++ b/works/population/description-en.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name=”description” content="Population of Japan from 1980 to 2040, in each age class">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/population/description-en.html" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Population of Japan" />
