Fix header information, Add introduction

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Data Visualization Designer in Tokyo" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title></title>
+    <title>Kazuki OGIWARA: Personal page</title>
 		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
 		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
@@ -38,6 +38,7 @@
           <div id="title-block">
             <h1>Kazuki OGIWARA</h1>
             <h3>Data Visualization Designer in Tokyo</h3>
+            <p class="introduction">Hello, I'm Kazuki OGIWARA and I design data visualizations, infographics, and websites. I'm working as Data Visualization Designer at a news media in Tokyo.</p>
           </div>
           <div id="works-block">
             <section>
