--- a/about/index.html
+++ b/about/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="My works of data visualization">
-    <meta property="og:url" content="https://kaz-ogiwara.github.io/works/" />
+    <meta name=”description” content="About me">
+    <meta property="og:url" content="https://kaz-ogiwara.github.io/about/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Works - Kazuki OGIWARA" />
-    <meta property="og:description" content="My works of data visualization" />
-    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_works.png" />
+    <meta property="og:title" content="About - Kazuki OGIWARA" />
+    <meta property="og:description" content="About me" />
+    <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_about.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title></title>
+    <title>About - Kazuki OGIWARA</title>
 		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
 		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
