--- a/works/temperature/description-en.html
+++ b/works/temperature/description-en.html
@@ -14,8 +14,7 @@
     <title>140 years temperature in Tokyo</title>
 		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/temperature/description-amp-en.html">
 		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
-		<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
+		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
 	</head>
 	<body>
 		<div id="cover">
