Change works page title

--- a/works/index.html
+++ b/works/index.html
@@ -31,8 +31,8 @@
 		</div>
       <div id="pjax-content" class="home">
         <div id="title-block">
-          <h1>Kazuki OGIWARA</h1>
-          <h3>Data Visualization Engineer in Tokyo</h3>
+          <h1>Works</h1>
+          <h3>Kazuki OGIWARA</h3>
         </div>
         <div id="works-block">
 			<section>
