#pjax-content -> #pjax-container, #page-content -> #pjax-content

--- a/about/index.html
+++ b/about/index.html
@@ -29,8 +29,8 @@
 				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content">
-        <div id="page-content" class="about">
+			<div id="pjax-container">
+        <div id="pjax-content" class="about">
           <div id="title-block">
             <h1>About</h1>
           </div>
@@ -109,10 +109,10 @@
             </section>
           </div>
         </div>
-      </div>
+			</div>
 		</div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
+		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
   </body>
 </html>
