--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content">
-        <div id="page-content" class="home">
+			<div id="pjax-container">
+        <div id="pjax-content" class="home">
           <div id="title-block">
             <h1>Kazuki OGIWARA</h1>
             <h3>Data Visualization Designer in Tokyo</h3>
@@ -101,10 +101,10 @@
             <a class="button pjax" href="about/">More About</a>
           </div>
         </div>
-      </div>
+			</div>
 		</div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
+		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
   </body>
 </html>
