--- a/works/trade/description-en.html
+++ b/works/trade/description-en.html
@@ -30,8 +30,8 @@
 				<div class="text-menu"><a href="https://kaz-ogiwara.github.io/about/" class="pjax">About</a></div>
 			</div>
 		</div>
-      <div id="pjax-content">
-        <div id="page-content" class="work-description">
+			<div id="pjax-container">
+        <div id="pjax-content" class="work-description">
           <div id="title-block">
             <div class="date">August 2017</div>
             <h1>Material to Product</h1>
@@ -47,10 +47,10 @@
             <p>Languages and libraries: JavaScript (P5.js, jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
           </div>
         </div>
-      </div>
+			</div>
 		</div>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-    <script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
+		<script src="https://kaz-ogiwara.github.io/assets/js/jquery.pjax.min.js"></script>
     <script src="https://kaz-ogiwara.github.io/assets/js/script.min.js"></script>
   </body>
 </html>
