Add public works in 2018

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
             <section>
               <div class="works">
 		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices.png)">
+				<a href="https://kaz-ogiwara.github.io/works/landprices/description-en.html" class="pjax"></a>
+			</div>
+			<div class="title">3D map of Tokyo Land Prices</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
+				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html" class="pjax"></a>
+			</div>
+			<div class="title">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
+		</div>
+		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
 				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" class="pjax"></a>
 				<div class="ribbon">
@@ -47,24 +59,6 @@
 				</div>
 			</div>
 			<div class="title">Visualization of Human Trafficking</div>
-		</div>
-		<div class="work">
-			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png)">
-				<a href="https://kaz-ogiwara.github.io/works/teachers/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
-			</div>
-			<div class="title">Schools are depending on part-time teachers</div>
-		</div>
-		<div class="work">
-			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png)">
-				<a href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
-			</div>
-			<div class="title">Just Visualization: Japanese Coins</div>
 		</div>
               </div>
             </section>
