--- a/works/index.html
+++ b/works/index.html
@@ -37,7 +37,24 @@
         </div>
         <div id="works-block">
 			<section>
-				<h3>2018 - Private works</h3>
+				<h3>2018 - Public works</h3>
+				<div class="works">
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices.png)">
+				<a href="https://kaz-ogiwara.github.io/works/landprices/description-en.html" class="pjax"></a>
+			</div>
+			<div class="title">3D map of Tokyo Land Prices</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
+				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html" class="pjax"></a>
+			</div>
+			<div class="title">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
+		</div>
+				</div>
+			</section>
+			<section>
+				<h3>2018 - Personal works</h3>
 				<div class="works">
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
@@ -69,7 +86,7 @@
 				</div>
 			</section>
 			<section>
-				<h3>2017 - Private works</h3>
+				<h3>2017 - Personal works</h3>
 				<div class="works">
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png)">
@@ -96,12 +113,6 @@
 				<a href="https://kaz-ogiwara.github.io/works/pyramids/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">From Uganda to Japan</div>
-		</div>
-		<div class="work">
-			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
-				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html" class="pjax"></a>
-			</div>
-			<div class="title">140 years temperature in Tokyo</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png)">
