--- a/works/temperature/description-en.html
+++ b/works/temperature/description-en.html
@@ -7,11 +7,11 @@
     <meta name=”description” content="Daily average temperature in Tokyo over the past 140 years">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/works/temperature/description-en.html" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="140 years temperature in Tokyo" />
+    <meta property="og:title" content="Summer in Tokyo is Gradually Becoming Hotter and Longer" />
     <meta property="og:description" content="Daily average temperature in Tokyo over the past 140 years" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>140 years temperature in Tokyo</title>
+    <title>Summer in Tokyo is Gradually Becoming Hotter and Longer</title>
 		<link rel="amphtml" href="https://kaz-ogiwara.github.io/works/temperature/description-amp-en.html">
 		<link rel="stylesheet" href="https://kaz-ogiwara.github.io/assets/css/style.min.css">
 		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-89303107-2','auto');ga('send','pageview');</script>
@@ -33,18 +33,16 @@
 			<div id="pjax-container">
         <div id="pjax-content" class="work-description">
           <div id="title-block">
-            <div class="date">June 2017</div>
-            <h1>140 years temperature in Tokyo</h1>
+            <div class="date">July 2018</div>
+            <h1>Summer in Tokyo is Gradually Becoming Hotter and Longer</h1>
             <h3>Daily average temperature in Tokyo over the past 140 years</h3>
           </div>
           <div id="eyecatch-block">
             <img id="eyecatch" src="../../assets/img/eyecatch_temperature.png">
           </div>
           <div id="article-block">
-            <p>This visualisation is a heat map which describes how daily average temperature in Tokyo has changed over the past 140 years, from 1886 to 2015. Each dot, which can be divided into nine colours from blue to red, describes an average temperature on each day. By hovering each dot, you can check the correct temperature on that day. The story of this visualisation is that Tokyo is gradually becoming hotter: We can see the summer is getting hotter and longer, and, in contrast, winter is getting warmer and shorter.</p>
-            <p>This work was submitted as a class assignment.</p>
-            <p>Data source: <a href="http://www.jma.go.jp/jma/index.html" target="_blank">Japan Meteoroligical Agency</a></p>
-            <p>Languages and libraries: JavaScript (jQuery), SQL (MySQL) and PHP for retrieving and shaping data</p>
+            <p>This heat map indicates the average daily temperatures of the summer season (June to September) in Tokyo over the course of 140 years. You can hover over or tap on a cell to see detailed information. Each cell indicates the average temperature on the day by 2°, from blue (less than 18°C) to deep red (30°C or more). The raw data were obtained from the Japan Meteorological Agency. This visualization shows that the temperature in Tokyo has been steadily rising and now approaching a deadly level.</p>
+            <p>This is a public work. The app and the explanation are at <a href="http://toyokeizai.net/sp/visual/tko/temperature/" target="_blank">Toyo Keizai Online</a> [Japanese].</p>
           </div>
         </div>
 			</div>
