Add date and remove ribbons from works

--- a/index.html
+++ b/index.html
@@ -44,25 +44,24 @@
 				<a href="https://kaz-ogiwara.github.io/works/landprices/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">3D map of Tokyo Land Prices</div>
+			<div class="date">October 2018</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
 				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
+			<div class="date">July 2018</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
 				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
 			</div>
 			<div class="title">Visualization of Human Trafficking</div>
+			<div class="date">July 2018</div>
 		</div>
               </div>
             </section>
-            <p class="center">Works with ribbon have interctive version.</p>
           </div>
           <div class="button-block">
             <a class="button pjax" href="works/">More Works</a>
