--- a/works/index.html
+++ b/works/index.html
@@ -44,12 +44,14 @@
 				<a href="https://kaz-ogiwara.github.io/works/landprices/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">3D map of Tokyo Land Prices</div>
+			<div class="date">October 2018</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
 				<a href="https://kaz-ogiwara.github.io/works/temperature/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Summer in Tokyo is Gradually Becoming Hotter and Longer</div>
+			<div class="date">July 2018</div>
 		</div>
 				</div>
 			</section>
@@ -59,29 +61,23 @@
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_viz4socialgood.png)">
 				<a href="https://kaz-ogiwara.github.io/works/viz4socialgood/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
 			</div>
 			<div class="title">Visualization of Human Trafficking</div>
+			<div class="date">July 2018</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_teachers.png)">
 				<a href="https://kaz-ogiwara.github.io/works/teachers/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
 			</div>
 			<div class="title">Schools are depending on part-time teachers</div>
+			<div class="date">March 2018</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_jpycoins.png)">
 				<a href="https://kaz-ogiwara.github.io/works/jpycoins/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
 			</div>
 			<div class="title">Just Visualization: Japanese Coins</div>
+			<div class="date">February 2018</div>
 		</div>
 				</div>
 			</section>
@@ -91,11 +87,9 @@
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_dissolution.png)">
 				<a href="https://kaz-ogiwara.github.io/works/dissolution/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
 			</div>
 			<div class="title">Elections and Dissolutions in The G7</div>
+			<div class="date">November 2017</div>
 		</div>
 				</div>
 			</section>
@@ -107,55 +101,59 @@
 				<a href="https://kaz-ogiwara.github.io/works/trade/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Material to Product</div>
+			<div class="date">August 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_pyramids.png)">
 				<a href="https://kaz-ogiwara.github.io/works/pyramids/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">From Uganda to Japan</div>
+			<div class="date">July 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_nobelprize.png)">
 				<a href="https://kaz-ogiwara.github.io/works/nobelprize/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Scientists Making a Queue</div>
+			<div class="date">May 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_musicxml.png)">
 				<a href="https://kaz-ogiwara.github.io/works/musicxml/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Music score visualization</div>
+			<div class="date">April, 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_collisions.png)">
 				<a href="https://kaz-ogiwara.github.io/works/collisions/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Vehicle collisions in Edinburgh</div>
+			<div class="date">April, 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_population.png)">
 				<a href="https://kaz-ogiwara.github.io/works/population/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Population of Japan</div>
+			<div class="date">9 Apr 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_tourists.png)">
 				<a href="https://kaz-ogiwara.github.io/works/tourists/description-en.html" class="pjax"></a>
 			</div>
 			<div class="title">Tourists to Japan</div>
+			<div class="date">11 Feb 2017</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_earthquakes.png)">
 				<a href="https://kaz-ogiwara.github.io/works/earthquakes/description-en.html" class="pjax"></a>
-				<div class="ribbon">
-					<span></span>
-				</div>
 			</div>
 			<div class="title">Earthquakes on the earth</div>
+			<div class="date">23 Feb 2017</div>
 		</div>
 				</div>
 			</section>
-          <p class="center">Works with ribbon have interctive version.</p>
         </div>
       </div>
 			</div>
