--- a/works/index.html
+++ b/works/index.html
@@ -37,14 +37,33 @@
         </div>
         <div id="works-block">
 			<section>
+				<h3>2019 - Public works</h3>
+				<div class="works">
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices2.png)">
+				<a href="https://kaz-ogiwara.github.io/works/landprices2/description-en.html" class="pjax"></a>
+			</div>
+			<div class="title">Japan Land Values 3D map</div>
+			<div class="date">March 2019</div>
+		</div>
+		<div class="work">
+			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_librarians.png)">
+				<a href="https://kaz-ogiwara.github.io/works/librarians/description-en.html" class="pjax"></a>
+			</div>
+			<div class="title">Job Security of Librarians</div>
+			<div class="date">January 2019</div>
+		</div>
+				</div>
+			</section>
+			<section>
 				<h3>2018 - Public works</h3>
 				<div class="works">
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_landprices.png)">
 				<a href="https://kaz-ogiwara.github.io/works/landprices/description-en.html" class="pjax"></a>
 			</div>
-			<div class="title">3D map of Tokyo Land Prices</div>
-			<div class="date">October 2018</div>
+			<div class="title">Average Land Prices Map of Japanese Municipalities</div>
+			<div class="date">November 2018</div>
 		</div>
 		<div class="work">
 			<div class="image" style="background-image:url(https://kaz-ogiwara.github.io/assets/img/eyecatch_temperature.png)">
